[package]
name = "rust-samples-darren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# hammer = { version = "0.5.0"} #Rust 官方仓库 crates.io
# color = { git = "https://github.com/bjz/color-rs" } //依赖github项目
# geometry = { path = "local/dir2" } //依赖本地工程

